tests/baselines/reference/es6ModuleFunctionDeclaration.errors.txt
es6ModuleFunctionDeclaration.ts(8,8): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
es6ModuleFunctionDeclaration.ts(18,1): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.


==== es6ModuleFunctionDeclaration.ts (2 errors) ====
    export function foo() {
    }
    function foo2() {
    }
    foo();
    foo2();
    
    export module m1 {
           ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        export function foo3() {
        }
        function foo4() {
        }
        foo();
        foo2();
        foo3();
        foo4();
    }
    module m2 {
    ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        export function foo3() {
        }
        function foo4() {
        }
        foo();
        foo2();
        foo3();
        foo4();
        m1.foo3();
    }